2002-02-04  Michael Meeks  <michael@ximian.com>

	* Version 1.110.2

2002-02-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui-auto.c
	(test_ui_node_attrs): split from
	(test_ui_node): here
	(test_ui_node_inserts): impl.
	(test_engine_default_placeholder): impl.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_insert_before): unlink new_before
	before operating & simplify flow.

	* tests/test-ui-auto.c (test_engine_misc): rename

2002-02-04  Michael Meeks  <michael@ximian.com>

	* Version 1.110.1

2002-02-04  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): remove bogus thaw,
	unhide the placeholder containing radio buttons

2002-02-04  Paolo Maggi  <maggi@athena.polito.it>

	* bonobo/bonobo-file-selector-ui.c: updated to work
	with the new GtkTreeView based GtkFileSelection widget

2002-02-04  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c
	(impl_emit_event_on): hold refs on the engine.
	(class_init): setup state_id

2002-02-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c (do_set_attr): fix
	heinous bug.

	* tests/test-ui-auto.c (test_ui_node): impl.

2002-02-02  Michael Meeks  <michael@ximian.com>

	* samples/bonoboui/hello.c (utf8_reverse): copy
	from glib/glib/gpattern.c
	(hello_on_button_click): use it not g_strreverse.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_set_attr_by_id): split out into
	(do_set_attr): here.
	(bonobo_ui_node_try_set_attr): impl.

	* bonobo/bonobo-ui-engine.c (set_cmd_attr): only
	signal / re-build if different.

2002-02-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (set_cmd_attr):
	take a quark

2002-01-31  Jens Finke <jens@triq.net>

	* bonobo/bonobo-property-control.c (bonobo_property_control_new):
	Don't create property control object here. This is done by
	bonobo_property_control_new_full.

2002-01-29  Michael Meeks  <michael@ximian.com>

	* Version 1.110.0

2002-01-28  Szabolcs Ban <shooby@gnome.hu>

	* configure.in Added Hungarian language.
