@@ -576,12 +576,14 @@ impl_bonobo_ui_sync_menu_build (BonoboUISync     *sync,
 			else {
 				gchar *label, *accel;
 
-				if (!bonobo_ui_node_has_attr (node, "label")) {
+				if (!bonobo_ui_node_has_attr (node, "label") &&
+				    !bonobo_ui_node_has_attr (cmd_node, "label")) {
 					label = dgettext (stock_item.translation_domain, stock_item.label);
 					bonobo_ui_node_set_attr (node, "label", label);
 				}
 
-				if (!bonobo_ui_node_has_attr (node, "accel")) {
+				if (!bonobo_ui_node_has_attr (node, "accel") &&
+				    !bonobo_ui_node_has_attr (cmd_node, "accel")) {
 					accel = bonobo_ui_util_accel_name (stock_item.keyval, stock_item.modifier);
 					bonobo_ui_node_set_attr (node, "accel", accel);
 					g_free (accel);
@@ -591,11 +593,15 @@ impl_bonobo_ui_sync_menu_build (BonoboUISync     *sync,
 			icon_set = gtk_icon_factory_lookup_default (stock_id);
 
 			if (icon_set) {
-				if (!bonobo_ui_node_has_attr (node, "pixtype"))
+				if (!bonobo_ui_node_has_attr (node, "pixtype") &&
+				    !bonobo_ui_node_has_attr (cmd_node, "pixtype"))
 					bonobo_ui_node_set_attr (node, "pixtype", "stock");
-				if (!bonobo_ui_node_has_attr (node, "pixname"))
+				if (!bonobo_ui_node_has_attr (node, "pixname") &&
+				    !bonobo_ui_node_has_attr (cmd_node, "pixname"))
 					bonobo_ui_node_set_attr (node, "pixname", stock_id);
 			}
+
+			g_free (stock_id);
 		}
 
 		/* Create menu item */
